--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,3 @@
-
-
-* {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-}
-
 body {
     height: 100vh;
     background-color: #76045D;
@@ -15,6 +7,7 @@ body {
         "main"
         "footer";
     grid-template-rows: 100px 1fr 100px;
+    font-family: 'Montserrat', sans-serif;
 }
 
 header {
@@ -28,7 +21,11 @@ header {
 
 main {
     grid-area: main;
-    
+    display: grid;
+    grid-template-areas: 
+        "description product social";
+        grid-template-columns: 380px 1fr 48px;
+        padding: 0 100px;
 }
 
 footer {
