--- a/css/navegation.css
+++ b/css/navegation.css
@@ -6,8 +6,13 @@
     color: #76045D;
     display: grid;
     place-items: center;
+    transition: all .5s;
 }
 
 .product__navegation-container {
     display: flex;
+}
+
+.navegation:hover {
+    background-color: black;
 }
